--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@rsbuild/core": "^0.1.9",
     "@rsbuild/plugin-react": "^0.1.9",
     "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.2.17",
-    "typescript": "^5.3.0"
+    "@types/react-dom": "18.2.18",
+    "typescript": "5.3.3"
   }
 }
